@@ -1,3 +1,8 @@
+2001-08-09  Havoc Pennington  <hp@pobox.com>
+
+	* src/window.c (meta_window_configure_request): Honor USPosition
+	even post-map. I know I'll regret this.
+
 2001-08-07  Havoc Pennington  <hp@pobox.com>
 
 	* src/display.c (meta_display_open): set _NET_WM_NAME 
